--- a/Project/app/src/main/res/layout/dialog_about.xml
+++ b/Project/app/src/main/res/layout/dialog_about.xml
@@ -18,11 +18,20 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp">
 
+            <ImageView
+                android:id="@+id/imageAppAbout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                app:srcCompat="@drawable/logo_image" />
+
             <TextView
                 android:id="@+id/textAppAbout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:text="@string/text_about_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#333" />
 
         </TableRow>
@@ -34,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@string/text_about_version"
                 android:textColor="#333" />
         </TableRow>
 
@@ -44,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@string/text_about_publish"
                 android:textColor="#333" />
         </TableRow>
 
