--- a/Project/app/src/main/res/values/colors.xml
+++ b/Project/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorAccent">#cd0b38</color>
+    <color name="msgBackground">#C1F2F6</color>
+
 </resources>
