--- a/Project/app/src/main/res/values/styles.xml
+++ b/Project/app/src/main/res/values/styles.xml
@@ -25,5 +25,27 @@
     <style name="ThemeOverlay">a</style>
 
     <style name="Theme">b</style>
+    <style name="_ButtonFunctionKey">
+        <item name="android:layout_width">103dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:background">#FF5EBDC1</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat</item>item>
+    </style>
+
+    <style name="_ButtonFunctionKey2">
+        <item name="android:layout_width">76dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">#FF5EBDC1</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat</item>item>
+    </style>
+
 
 </resources>
